--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ tempor incididunt ut labore et dolore magna aliqua. </p>
 
     <div class="container pb-3 mt-3">
       <div class="copyright text-center">
-        &copy; Copyright <strong><span>Web Solutions</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Web Solutions</span></strong>. All Rights Reserved | Design & Developed  by <b>Shah Hussain</b>
       </div>
      
     </div>
